--- a/style.css
+++ b/style.css
@@ -4,21 +4,23 @@ body {
     padding: 30px 90px 0 90px;
 }
 
-#bar {
+#bar-header {
     margin-top: 30px;
     width: 100%;
     height: 2px;
     background-color: black;
-    margin-bottom: 100px
-}
-
-.picture {
-    width: 100%;
-    height: 500px;
     margin-bottom: 100px;
 }
 
+.picture {
+    width: 1260;
+    /* width: 100%; */
+    height: 500px;
+    border: solid;
+}
+
 h1 {
+    padding: 100px 0 0 0;
     margin: 0;
     font-size: 34px;
     font-family: "Avenir Heavy";
@@ -30,24 +32,70 @@ h1 {
     justify-content: space-around;
 }
 
-button {
+#men,
+#women {
     border: none;
+    border-bottom: solid 2px;
     background-color: #fff;
     cursor: pointer;
     font-family: "Avenir Medium";
     font-size: 28px;
+    border-color: transparent;
+    color: #5C61DA;
+    padding-left: 0px;
+    padding-right: 0px;
+    /* display: inline-block; */
 }
 
-#women {
+#women:after,
+#men:after {
+    display: block;
+    content: '';
+    margin-bottom: -3px;
     border-bottom: solid 2px;
+    transform: scaleX(0);
+    transition: transform 250ms ease-in-out;
 }
 
-#men {
-    border-bottom: none 2px;
+#women:hover:after,
+#men:hover:after {
+    transform: scaleX(1);
 }
 
-.women-price {
-    padding: 0 80px 100px 80px;
+#women:after,
+#men:after {
+    transform-origin: 0% 50%;
+}
+
+#women-price,
+#men-price {
+    padding: 0 80px 0 80px;
+}
+
+#women-price.visible {
+    visibility: visible;
+    position: none;
+    opacity: 1;
+    transition: opacity 0.7s ease;
+}
+
+#men-price.visible {
+    opacity: 1;
+    transition: opacity 0.7s ease;
+}
+
+#women-price.hidden,
+#men-price.hidden {
+    visibility: hidden;
+    position: absolute;
+    opacity: 0;
+}
+
+#women.active,
+#men.active {
+    border-color: #5C61DA;
+    opacity: 1;
+    transition: opacity 0.7s ease;
 }
 
 .line {
@@ -63,12 +111,12 @@ button {
 
 #price {
     font-family: "Avenir Light";
-    color: #3D3D3D
+    color: #3D3D3D;
 }
 
 #info {
     font-family: "Avenir";
-    margin-top: -15px
+    margin-top: -15px;
 }
 
 #little-bar {
@@ -95,25 +143,47 @@ button {
     margin: 10px 80px 0 80px;
 }
 
+.line-product {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
 .button-show-more {
     display: flex;
     justify-content: center;
 }
 
 #show-more {
+    margin-top: 10px;
     font-size: 18px;
     cursor: pointer;
-    border-bottom: solid 1.5px;
-    margin-bottom: 100px
+    border: none;
+    border-bottom: solid 2px;
+    background-color: transparent;
+    font-family: "Avenir Medium";
+    color: #5C61DA;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .avis {
     display: flex;
 }
 
-h2 {
-    font-family: "Avenir Heavy";
-    font-size: 24px;
+.block {
+    width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 40px;
+}
+
+h3 {
+    font-family: "Avenir Medium";
+    font-size: 22px;
+    margin: 0;
 }
 
 #star {
@@ -121,15 +191,13 @@ h2 {
 }
 
 .avis img {
-    margin-right: 4px
+    margin-right: 4px;
 }
 
 .comment {
     font-family: "Avenir Book";
     font-size: 18px;
-    width: 940px;
-    margin-left: auto;
-    margin-right: auto;
+    line-height: 30px;
 }
 
 span {
@@ -137,9 +205,105 @@ span {
     font-size: 24px;
 }
 
-.date {
+.place {
+    padding: 100px 0 40px 0;
+    display: flex;
+}
+
+.hour {
+    width: 460px;
+    height: 370px;
+    margin-left: 0;
+    margin-right: auto;
+}
+
+h2 {
+    margin-top: 0;
+    font-size: 24px;
+    font-family: "Avenir Medium";
+}
+
+.line-hours {
+    display: flex;
+    justify-content: space-between;
+    height: 27px;
+    margin-bottom: 20px;
+}
+
+#day {
+    font-family: "Avenir Heavy";
+    font-size: 18px;
+}
+
+#hour {
     font-family: "Avenir Light";
-    font-style: italic;
-    font-size: 14px;
-    margin-left: 160px
+    font-size: 18px;
+}
+
+iframe {
+    margin-right: 0;
+    margin-left: auto;
+}
+
+#bar-footer {
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    margin-bottom: 60px;
+}
+
+footer {
+    margin-top: 100px;
+}
+
+.informations {
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 60px;
+}
+
+.contact,
+.adress {
+    display: flex;
+    justify-content: center;
+    height: 27px;
+}
+
+#icon-footer {
+    padding-right: 20px
+}
+
+#adress,
+#num {
+    font-family: "Avenir Heavy";
+    font-size: 18px;
+    color: #5C61DA;
+    text-decoration: none;
+}
+
+
+/*  */
+
+.carousel {
+    display: flex;
+    justify-content: center;
+    margin-top: -5px;
+}
+
+.carousel-button {
+    width: 12px;
+    height: 12px;
+    border: none;
+    border-radius: 50%;
+    background-color: #B8B8B8;
+    margin-right: 40px;
+    cursor: pointer;
+}
+
+#b1 {
+    background-color: #5C61DA;
+}
+
+.box-comment {
+    float: left
 }
