--- a/style.css
+++ b/style.css
@@ -1,312 +1,312 @@
 body {
-    height: 100vh;
-    margin: 0;
-    padding: 30px 90px 0 90px;
+  height: 100vh;
+  margin: 0;
+  padding: 30px 90px 0 90px;
 }
 
 #bar-header {
-    margin-top: 30px;
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    margin-bottom: 100px;
+  margin-top: 30px;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  margin-bottom: 100px;
 }
 
 .picture {
-    width: 1260;
-    /* width: 100%; */
-    height: 500px;
-    border: solid;
+  width: 1260;
+  /* width: 100%; */
+  height: 500px;
+  border: solid;
 }
 
 h1 {
-    padding: 100px 0 0 0;
-    margin: 0;
-    font-size: 34px;
-    font-family: "Avenir Heavy";
+  padding: 100px 0 0 0;
+  margin: 0;
+  font-size: 34px;
+  font-family: 'Avenir Heavy';
 }
 
 .choices {
-    padding: 50px 80px 40px 80px;
-    display: flex;
-    justify-content: space-around;
+  padding: 50px 80px 40px 80px;
+  display: flex;
+  justify-content: space-around;
 }
 
 #men,
 #women {
-    border: none;
-    border-bottom: solid 2px;
-    background-color: #fff;
-    cursor: pointer;
-    font-family: "Avenir Medium";
-    font-size: 28px;
-    border-color: transparent;
-    color: #5C61DA;
-    padding-left: 0px;
-    padding-right: 0px;
-    /* display: inline-block; */
+  border: none;
+  border-bottom: solid 2px;
+  background-color: #fff;
+  cursor: pointer;
+  font-family: 'Avenir Medium';
+  font-size: 28px;
+  border-color: transparent;
+  color: #5c61da;
+  padding-left: 0px;
+  padding-right: 0px;
+  /* display: inline-block; */
 }
 
 #women:after,
 #men:after {
-    display: block;
-    content: '';
-    margin-bottom: -3px;
-    border-bottom: solid 2px;
-    transform: scaleX(0);
-    transition: transform 250ms ease-in-out;
+  display: block;
+  content: '';
+  margin-bottom: -3px;
+  border-bottom: solid 2px;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
 }
 
 #women:hover:after,
 #men:hover:after {
-    transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 #women:after,
 #men:after {
-    transform-origin: 0% 50%;
+  transform-origin: 0% 50%;
 }
 
 #women-price,
 #men-price {
-    padding: 0 80px 0 80px;
+  padding: 0 80px 0 80px;
 }
 
 #women-price.visible {
-    visibility: visible;
-    position: none;
-    opacity: 1;
-    transition: opacity 0.7s ease;
+  visibility: visible;
+  position: none;
+  opacity: 1;
+  transition: opacity 0.7s ease;
 }
 
 #men-price.visible {
-    opacity: 1;
-    transition: opacity 0.7s ease;
+  opacity: 1;
+  transition: opacity 0.7s ease;
 }
 
 #women-price.hidden,
 #men-price.hidden {
-    visibility: hidden;
-    position: absolute;
-    opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  opacity: 0;
 }
 
 #women.active,
 #men.active {
-    border-color: #5C61DA;
-    opacity: 1;
-    transition: opacity 0.7s ease;
+  border-color: #5c61da;
+  opacity: 1;
+  transition: opacity 0.7s ease;
 }
 
 .line {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  font-size: 20px;
 }
 
 #name {
-    font-family: "Avenir Medium";
+  font-family: 'Avenir Medium';
 }
 
 #price {
-    font-family: "Avenir Light";
-    color: #3D3D3D;
+  font-family: 'Avenir Light';
+  color: #3d3d3d;
 }
 
 #info {
-    font-family: "Avenir";
-    margin-top: -15px;
+  font-family: 'Avenir';
+  margin-top: -15px;
 }
 
 #little-bar {
-    width: 100%;
-    height: 2px;
-    background-color: #B8B8B8;
-    margin: 0px;
+  width: 100%;
+  height: 2px;
+  background-color: #b8b8b8;
+  margin: 0px;
 }
 
 .products {
-    padding: 50px 80px 40px 80px;
-    display: flex;
-    justify-content: space-around;
+  padding: 50px 80px 40px 80px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .product {
-    width: 276px;
-    height: 278px;
+  width: 276px;
+  height: 278px;
 }
 
 #product-image {
-    width: 116px;
-    height: 166px;
-    margin: 10px 80px 0 80px;
+  width: 116px;
+  height: 166px;
+  margin: 10px 80px 0 80px;
 }
 
 .line-product {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    font-size: 20px;
-    margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 5px;
 }
 
 .button-show-more {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #show-more {
-    margin-top: 10px;
-    font-size: 18px;
-    cursor: pointer;
-    border: none;
-    background-color: transparent;
-    font-family: "Avenir Medium";
-    color: #5C61DA;
-    padding-left: 0px;
-    padding-right: 0px;
+  margin-top: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  font-family: 'Avenir Medium';
+  color: #5c61da;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .avis {
-    display: flex;
+  display: flex;
 }
 
 .block {
-    width: 940px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
+  width: 940px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
 }
 
 h3 {
-    font-family: "Avenir Medium";
-    font-size: 22px;
-    margin: 0;
+  font-family: 'Avenir Medium';
+  font-size: 22px;
+  margin: 0;
 }
 
 #star {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .avis img {
-    margin-right: 4px;
+  margin-right: 4px;
 }
 
 .comment {
-    font-family: "Avenir Book";
-    font-size: 18px;
-    line-height: 30px;
+  font-family: 'Avenir Book';
+  font-size: 18px;
+  line-height: 30px;
+  height: 160px;
 }
 
 span {
-    font-family: "Avenir Heavy";
-    font-size: 24px;
+  font-family: 'Avenir Heavy';
+  font-size: 24px;
 }
 
 .place {
-    padding: 100px 0 40px 0;
-    display: flex;
+  padding: 100px 0 40px 0;
+  display: flex;
 }
 
 .hour {
-    width: 460px;
-    height: 370px;
-    margin-left: 0;
-    margin-right: auto;
+  width: 460px;
+  height: 370px;
+  margin-left: 0;
+  margin-right: auto;
 }
 
 h2 {
-    margin-top: 0;
-    font-size: 24px;
-    font-family: "Avenir Medium";
+  margin-top: 0;
+  font-size: 24px;
+  font-family: 'Avenir Medium';
 }
 
 .line-hours {
-    display: flex;
-    justify-content: space-between;
-    height: 27px;
-    margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  height: 27px;
+  margin-bottom: 20px;
 }
 
 #day {
-    font-family: "Avenir Heavy";
-    font-size: 18px;
+  font-family: 'Avenir Heavy';
+  font-size: 18px;
 }
 
 #hour {
-    font-family: "Avenir Light";
-    font-size: 18px;
+  font-family: 'Avenir Light';
+  font-size: 18px;
 }
 
 iframe {
-    margin-right: 0;
-    margin-left: auto;
+  margin-right: 0;
+  margin-left: auto;
 }
 
 #bar-footer {
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    margin-bottom: 60px;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  margin-bottom: 60px;
 }
 
 footer {
-    margin-top: 100px;
+  margin-top: 100px;
 }
 
 .informations {
-    display: flex;
-    justify-content: space-around;
-    padding-bottom: 60px;
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 60px;
 }
 
 .contact,
 .adress {
-    display: flex;
-    justify-content: center;
-    height: 27px;
+  display: flex;
+  justify-content: center;
+  height: 27px;
 }
 
 #icon-footer {
-    padding-right: 20px
+  padding-right: 20px;
 }
 
 #adress,
 #num {
-    font-family: "Avenir Heavy";
-    font-size: 18px;
-    color: #5C61DA;
-    text-decoration: none;
+  font-family: 'Avenir Heavy';
+  font-size: 18px;
+  color: #5c61da;
+  text-decoration: none;
 }
-
 
 /*  */
 
 .carousel {
-    display: flex;
-    justify-content: center;
-    margin-top: -5px;
+  display: flex;
+  justify-content: center;
+  margin-top: -5px;
 }
 
 .carousel-button {
-    width: 12px;
-    height: 12px;
-    border: none;
-    border-radius: 50%;
-    background-color: #B8B8B8;
-    margin-right: 40px;
-    cursor: pointer;
+  width: 12px;
+  height: 12px;
+  border: none;
+  border-radius: 50%;
+  background-color: #b8b8b8;
+  margin-right: 40px;
+  cursor: pointer;
 }
 
 .carousel-button.classic {
-    background-color: #B8B8B8;
+  background-color: #b8b8b8;
 }
 
 .carousel-button.select {
-    background-color: #5C61DA;
+  background-color: #5c61da;
 }
 
 .box-comment {
-    float: left
+  float: left;
 }
