--- a/style.css
+++ b/style.css
@@ -14,9 +14,9 @@ body {
 
 .picture {
   width: 1260;
-  /* width: 100%; */
+  width: 100%;
   height: 500px;
-  border: solid;
+  /* border: solid; */
 }
 
 h1 {
@@ -44,7 +44,6 @@ h1 {
   color: #5c61da;
   padding-left: 0px;
   padding-right: 0px;
-  /* display: inline-block; */
 }
 
 #women:after,
@@ -168,15 +167,15 @@ h1 {
   padding-right: 0px;
 }
 
-.avis {
-  display: flex;
-}
-
 .block {
   width: 940px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 40px;
+}
+
+.avis {
+  display: flex;
 }
 
 h3 {
