--- a/css/products.css
+++ b/css/products.css
@@ -3,10 +3,6 @@
   display: flex;
 }
 
-.filter {
-  margin-right: 100px;
-}
-
 .category,
 .brand,
 .price {
@@ -14,10 +10,21 @@
   align-items: center;
 }
 
-button {
+/* summary::after {
+  content: ' ►';
+
+}
+details[open] summary:after {
+  content: ' ▼';
+
+} */
+
+summary {
+  list-style: none;
+  /* position: relative; */
   border: none;
-  padding-left: 0px;
-  padding-right: 50px;
+  margin-bottom: 20px;
+
   cursor: pointer;
 
   color: #5c61da;
@@ -26,19 +33,28 @@ button {
   font-size: 1.2em;
 }
 
-.triangle {
+details {
+  margin-right: 100px;
+}
+
+span {
+  display: inline-block;
+  margin-left: 30px;
   border-top: 10px solid black;
   border-right: 7px solid transparent;
   border-left: 7px solid transparent;
 }
 
-ul {
-  padding: 0;
+span.active  {
+  border-bottom: 7px solid transparent;
+  border-top: 7px solid transparent;
+  border-left: 10px solid black;
 }
 
 li {
   list-style: none;
   cursor: pointer;
+  position: relative;
 
   border: none;
   border-bottom: solid 2px;
@@ -58,7 +74,7 @@ li:after {
   border-bottom: solid 2px;
 
   transform: scaleX(0);
-  transition: transform 250ms ease-in-out;
+  transition: transform 200ms ease-in-out;
 }
 
 li:hover:after {
@@ -67,10 +83,4 @@ li:hover:after {
 
 li:after {
   transform-origin: 0% 50%;
-}
-
-#filters-category,
-#filters-brand,
-#filters-price {
-  display: none;
 }
