fix: font error

--- a/css/global.css
+++ b/css/global.css
@@ -1,21 +1,31 @@
 @font-face {
   font-family: Avenir-Light;
-  src: url(fonts/Metropolis-Light.otf);
+  src: url(/fonts/AvenirLTStd-Light.otf);
 }
 
 @font-face {
   font-family: Avenir-Book;
-  src: url(fonts/TTNorms-Regular.otf);
+  src: url(/fonts/AvenirLTStd-Book.otf);
+}
+
+@font-face {
+  font-family: Avenir-Roman;
+  src: url(/fonts/AvenirLTStd-Roman.otf);
 }
 
 @font-face {
   font-family: Avenir-Medium;
-  src: url(fonts/Metropolis-Medium.otf);
+  src: url(/fonts/Metropolis-Medium.otf);
 }
 
 @font-face {
   font-family: Avenir-Heavy;
-  src: url(fonts/Metropolis-SemiBold.otf);
+  src: url(/fonts/Metropolis-SemiBold.otf);
+}
+
+@font-face {
+  font-family: Avenir-Black;
+  src: url(/fonts/Metropolis-SemiBold.otf);
 }
 
 body {
@@ -65,7 +75,7 @@ footer {
 
 #adress,
 #num {
-  font-family: Avenir-Heavy;
+  font-family: Avenir-Black;
   font-size: 18px;
   color: #5c61da;
   text-decoration: none;
@@ -81,11 +91,15 @@ footer {
   color: #3d3d3d;
 }
 
-#haircut-info,
+#haircut-info {
+  font-family: Avenir-Book;
+  margin-top: -15px;
+}
+
 .info,
 .describe {
   font-family: Avenir-Book;
-  margin-top: -15px;
+  margin-top: -10px;
 }
 
 .product {
