--- a/css/products.css
+++ b/css/products.css
@@ -21,7 +21,8 @@ h3 {
   cursor: pointer;
 }
 
-span {
+#span-category,
+#span-price {
   display: inline-block;
   margin-left: 30px;
   border-top: 10px solid black;
