--- a/css/global.css
+++ b/css/global.css
@@ -33,8 +33,13 @@ body {
   user-select: none; /* Propriété standard */
 }
 
+header img {
+  width: 20%;
+}
+
 #bar-header {
   margin-top: 30px;
+  margin-bottom: 30px;
   width: 100%;
   height: 2px;
   background-color: black;
@@ -87,7 +92,6 @@ footer {
 
 #price-product {
   font-family: Avenir-Light;
-
   color: #3d3d3d;
 }
 
