--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,12 @@
-#header-index {
-  height: 10vh;
-}
-
 .landingpage {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 30px);
 }
 
 .presentation {
+  margin-top: 80px;
+  margin-bottom: 80px;
+
   flex-grow: 1;
   display: flex;
   justify-content: center;
@@ -19,22 +17,31 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  --text-width: 30%;
+}
+
+@media screen and (min-width: 1024px) {
+  #presentation-container {
+    --text-width: 35%;
+  }
 }
 
 .presentation-texts {
-  width: 340px;
+  margin-right: 2rem;
+  width: var(--text-width, 30%);
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .presentation-texts h1 {
   margin-top: -5px;
-  margin-bottom: 50px;
 }
 
 .presentation-texts p {
   font-family: Avenir-Roman;
-  font-size: 21px;
-  margin-bottom: 46px;
-  line-height: 31.5px;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
 }
 
 .presentation-texts p:last-child {
@@ -46,19 +53,27 @@
   color: #5c61da;
 }
 
+#size-pic {
+  width: calc(100% - var(--text-width, 30%) - 10%);
+  height: 100%;
+  position: absolute;
+  left: calc(var(--text-width, 30%) + 10%);
+}
+
 .picture {
-  width: 824px;
-  height: 500px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 h1 {
   margin: 0;
-  font-size: 34px;
+  font-size: 2rem;
   font-family: Avenir-Heavy;
 }
 
 .choices {
-  padding: 50px 80px 40px 80px;
+  padding: 40px 80px 40px 80px;
   display: flex;
   justify-content: space-around;
 }
@@ -70,7 +85,7 @@ h1 {
   background-color: transparent;
   cursor: pointer;
   font-family: Avenir-Medium;
-  font-size: 28px;
+  font-size: 1.75rem;
   border-color: transparent;
   color: #5c61da;
   padding-left: 0px;
@@ -132,7 +147,7 @@ h1 {
   display: flex;
   justify-content: space-between;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 .name {
@@ -156,37 +171,47 @@ h1 {
   justify-content: center;
 }
 
+.h1-space {
+  margin-top: 80px;
+}
+
 .products {
-  padding: 50px 80px 40px 80px;
+  padding: 40px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.product {
+  padding-right: 30px;
+  margin: 0;
+}
+
+.product:last-child {
+  padding-right: 0px;
 }
 
 .line-product {
   display: flex;
   justify-content: space-between;
   text-align: center;
-  font-size: 20px;
+  font-size: 1.25rem;
   margin-bottom: 5px;
 }
 
 #show-more {
   margin-top: 10px;
-  font-size: 18px;
+  font-size: 1.125rem;
   cursor: pointer;
   border: none;
   background-color: transparent;
   font-family: Avenir-Medium;
   color: #5c61da;
-  padding-left: 0px;
-  padding-right: 0px;
+  padding: 0px;
 }
 
 .block {
-  width: 940px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 40px;
+  margin: 40px 80px 0 80px;
 }
 
 .avis {
@@ -195,12 +220,12 @@ h1 {
 
 #name {
   font-family: Avenir-Medium;
-  font-size: 22px;
+  font-size: 1.375rem;
   margin: 0;
 }
 
 #star {
-  margin-left: 50px;
+  margin-left: 40px;
 }
 
 .avis img {
@@ -209,14 +234,14 @@ h1 {
 
 .comment {
   font-family: Avenir-Book;
-  font-size: 18px;
+  font-size: 1.125rem;
   line-height: 30px;
-  height: 160px;
+  border: solid;
 }
 
 .apostrophe {
   font-family: Avenir-Roman;
-  font-size: 24px;
+  font-size: 1.5rem;
 }
 
 .carousel {
@@ -286,3 +311,251 @@ iframe {
   margin-right: 0;
   margin-left: auto;
 }
+
+/* @media screen and (max-width: 1360px) {
+  .picture {
+    width: 724px;
+    height: 438px;
+  }
+
+  .presentation-texts h1 {
+    margin-bottom: 30px;
+  }
+
+  .presentation-texts p {
+    font-size: 1.2em;
+    margin-bottom: 40px;
+    line-height: 29px;
+  }
+}
+
+@media screen and (max-width: 1260px) {
+  header img {
+    width: 170px;
+  }
+
+  .picture {
+    width: 624px;
+    height: 378px;
+  }
+
+  h1 {
+    font-size: 1.8em;
+  }
+
+  .presentation-texts p {
+    font-size: 1.1em;
+    margin-bottom: 35px;
+    line-height: 27px;
+  }
+}
+
+@media screen and (max-width: 1160px) {
+  header img {
+    width: 150px;
+  }
+
+  #bar-header {
+    margin-top: 25px;
+  }
+
+  .picture {
+    width: 500px;
+    height: 300px;
+  }
+
+  h1 {
+    font-size: 1.6em;
+  }
+
+  .presentation-texts h1 {
+    margin-bottom: 25px;
+  }
+
+  .presentation-texts p {
+    font-size: 1em;
+    margin-bottom: 34px;
+    line-height: 22px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  header img {
+    width: 130px;
+  }
+
+  #bar-header {
+    margin-top: 20px;
+  }
+
+  .picture {
+    width: 400px;
+    height: 240px;
+  }
+
+  h1 {
+    font-size: 1.4em;
+  }
+
+  .presentation-texts h1 {
+    margin-bottom: 20px;
+  }
+
+  .presentation-texts p {
+    font-size: 0.9em;
+    margin-bottom: 20px;
+    line-height: 19px;
+  }
+
+  .block,
+  .product,
+  #product-image,
+  iframe,
+  .hours {
+    width: 10px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  body {
+    padding: 30px 50px 0 50px;
+  }
+
+  .presentation {
+    margin-top: 0;
+  }
+}
+
+@media screen and (max-width: 812px) {
+  h1 {
+    font-size: 1.2em;
+  }
+
+  .presentation-texts {
+    margin-right: 15px;
+    width: 240px;
+  }
+
+  .presentation-texts p {
+    font-size: 0.8em;
+    margin-bottom: 18px;
+    line-height: 16px;
+  }
+}
+
+@media screen and (max-width: 722px) {
+  header img {
+    width: 120px;
+  }
+
+  .picture {
+    width: 350px;
+    height: 210px;
+  }
+
+  h1 {
+    font-size: 1.1em;
+  }
+
+  .presentation-texts h1 {
+    margin-bottom: 15px;
+  }
+
+  .presentation-texts p {
+    font-size: 0.8em;
+    margin-bottom: 16px;
+    line-height: 14px;
+  }
+}
+
+@media screen and (max-width: 672px) {
+  body {
+    padding: 20px 40px 0 40px;
+  }
+
+  .landingpage {
+    height: calc(100vh - 15px);
+  }
+
+  .presentation-texts p {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (max-width: 652px) {
+  .picture {
+    width: 300px;
+    height: 180px;
+  }
+
+  h1 {
+    font-size: 1em;
+  }
+
+  .presentation-texts {
+    margin-right: 10px;
+    width: 200px;
+  }
+
+  .presentation-texts p {
+    font-size: 0.7em;
+    margin-bottom: 12px;
+    line-height: 12px;
+  }
+}
+
+@media screen and (max-width: 571px) {
+  header img {
+    width: 100px;
+  }
+
+  #bar-header {
+    margin-top: 15px;
+  }
+
+  .picture {
+    width: 300px;
+    height: 180px;
+  }
+
+  h1 {
+    font-size: 0.9em;
+  }
+
+  .presentation-texts {
+    margin-right: 7px;
+  }
+
+  .presentation-texts p {
+    font-size: 0.6em;
+    margin-bottom: 15px;
+    line-height: 12px;
+  }
+}
+
+@media screen and (max-width: 542px) {
+  .picture {
+    width: 260px;
+    height: 157px;
+  }
+
+  .presentation-texts {
+    margin-right: 15px;
+  }
+
+  .presentation-texts p {
+    font-size: 0.5em;
+    margin-bottom: 18px;
+    line-height: 11px;
+  }
+}
+
+@media screen and (max-width: 517px) {
+  body {
+    padding: 20px 30px 0 30px;
+  }
+
+  .presentation-texts {
+    margin-right: 7px;
+  }
+} */
