--- a/css/global.css
+++ b/css/global.css
@@ -93,6 +93,7 @@ footer {
 #price-product {
   font-family: Avenir-Light;
   color: #3d3d3d;
+  padding-top: 4px;
 }
 
 #haircut-info {
@@ -103,7 +104,7 @@ footer {
 .info,
 .describe {
   font-family: Avenir-Book;
-  margin-top: -10px;
+  margin-top: -8px;
 }
 
 .product {
