--- a/css/index.css
+++ b/css/index.css
@@ -243,7 +243,7 @@ h1 {
   width: 12px;
   height: 12px;
   border: none;
-  border-radius: 100%;
+  border-radius: 1000000px;
   background-color: #b8b8b8;
   margin-right: 40px;
   cursor: pointer;
